# car-crashes-py

./: MyUSAVisit - Copy.csv  MyUSAVisit.csv  New Text Document.txt  USA-States.csv  car_crashes.csv  geospatial_dashboard.html  geospatial_dashboard.py  plotMe.py  pyproject.toml  visited_places_map.html
