[tool.poetry]
name = "car-crashes-py"
version = "0.1.0"
description = "generate dashboards for car crash data set"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.3"
folium = "^0.16.0"
pandas = "^2.2.1"
hvplot = "^0.9.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
hvplot = "^0.9.2"
geopandas = "^0.14.3"
folium = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
